Editing for search results page

--- a/searchresults/index.html
+++ b/searchresults/index.html
@@ -11,20 +11,7 @@
 <body>
   <main>
     <h1>Search Results</h1>
-<<<<<<< HEAD
-<<<<<<< HEAD
     <form id="userform" action="#null" method="get">
-=======
-    <!-- todo: add form that replicates inputs from
-    the first form and allows editing -->
-
-
-  <!--  <form id="userform" action="#null" method="get">
->>>>>>> 9ae1c975c6216a7c4fe431c7f3d4f503333733ce
-=======
-    <form id="userform" action="#null" method="get">
-
->>>>>>> e0927adb190db42de4660b90031214ee29b4eb62
       <ol>
         <li>
           <label for="DepartureLocation" class="labels"> Please enter your Departure Location: </label>
@@ -203,8 +190,6 @@
             Price
           </li>
         </ul>
-
-
         <ul>
           <li>
             <label for="flightfour">Flight Four</label>
@@ -330,6 +315,6 @@
     <p> @Copyright Dominator Airlines!.......#DominateFlights.....</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--<script src="site.js"></script>-->
+  <script src="../site.js"></script>
 </body>
 </html>
