--- a/searchresults/index.html
+++ b/searchresults/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>Search Results</h1>
-    <form id="userform" action="#null" method="get">
+    <form id="Fligtupdate" action="#null" method="get">
       <ol>
         <li>
           <label for="DepartureLocation" class="labels"> Please enter your Departure Location: </label>
@@ -309,11 +309,7 @@
       </li>
     </ol>
   </form>
-
   </main>
-  <footer>
-    <p> @Copyright Dominator Airlines!.......#DominateFlights.....</p>
-  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="../site.js"></script>
 </body>
